tree-sitter-dowe/grammar.js
module.exports = grammar({
  name: "dowe",
  extras: $ => [/[ \r]/],
  rules: {
    source_file: $ => repeat(choice(seq(choice($.import_statement, $.node_line, $.text_line), "\n"), "\n")),
    import_statement: $ => seq("import", $.identifier, "from", $.import_path),
    node_line: $ => seq(field("name", $.line_name), repeat($.line_item)),
    line_name: $ => choice(
      $.root_keyword,
      $.block_keyword,
      $.control_keyword,
      $.action_keyword,
      $.component_name
    ),
    text_line: $ => seq(field("text", $.text_token), repeat($.text_token)),
    line_item: $ => choice($.prop, $.value),
    prop: $ => prec(1, seq($.property_name, ":", $.value)),
    value: $ => choice(
      $.string,
      $.array,
      $.object,
      $.boolean,
      $.null,
      $.number,
      $.method_name,
      $.path_literal,
      $.reference,
      $.identifier,
      $.property_name,
      $.text_fragment,
      $.punctuation
    ),
    text_token: $ => choice(
      $.string,
      $.reference,
      $.path_literal,
      $.method_name,
      $.number,
      $.boolean,
      $.null,
      $.identifier,
      $.text_fragment,
      $.punctuation
    ),
    array: $ => seq("[", optional(seq($.value, repeat(seq(",", $.value)))), "]"),
    object: $ => seq("{", repeat(choice($.object_entry, $.spread)), "}"),
    object_entry: $ => seq($.property_name, ":", $.value),
    spread: $ => seq("...", $.reference),
    import_path: $ => /"[^"\n]*"/,
    string: $ => /"([^"\\]|\\.)*"/,
    boolean: $ => choice("true", "false"),
    null: $ => "null",
    number: $ => /\d+(\.\d+)?/,
    reference: $ => /[A-Za-z_][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)+/,
    path_literal: $ => /\/[A-Za-z0-9_./:-]*/,
    method_name: $ => choice("GET", "POST", "PUT", "PATCH", "DELETE"),
    text_fragment: $ => token(prec(-2, /[^ \r\n\t\[\]\{\}",:\/]+/)),
    root_keyword: $ => choice("config", "main", "views", "layout", "page", "component"),
    block_keyword: $ => choice(
      "desktop",
      "server",
      "route",
      "method",
      "handler",
      "websocket",
      "init",
      "fonts",
      "env",
      "variable",
      "cors",
      "design",
      "theme",
      "children"
    ),
    control_keyword: $ => choice("if", "else", "each"),
    action_keyword: $ => choice("signal", "action", "request", "assign", "reset", "return", "response", "let", "log", "info", "warn", "error", "open", "message", "close", "drain", "onSuccess", "onError"),
    component_name: $ => choice("Box", "Flex", "Grid", "Card", "Input", "Button", "Alert", "Title", "Text", "Svg", "Path"),
    property_name: $ => token(prec(1, /[A-Za-z_][A-Za-z0-9_]*/)),
    identifier: $ => token(prec(-1, /[A-Za-z_][A-Za-z0-9_]*/)),
    punctuation: $ => choice(":", ",", ".", "!", "?", ";")
  }
})
